# emby-next-console

./: .gitignore  API.md  DESIGN_V2.md  DEVELOPMENT_PLAN.md  FRONTEND_REDESIGN.md  IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  STATS_V3_PLAN.md  deploy.sh  dev.sh  docker-compose.yml  pack.sh  start.sh  部署说明.md
backend/: .env.example  ANALYTICS_IMPLEMENTATION.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_webhook_events.py  0003_add_invite_codes_permission_templates_user_overrides.py  0004_fix_timestamp_server_default.py  0005_add_calendar.py  0006_notification_system.py  0007_advanced.py  0008_risk_action_logs.py  0009_calendar_has_file.py  0010_risk_violations.py  0011_create_users_meta.py  0012_create_quality_items.py  0013_create_notify_destinations.py  0014_create_api_keys.py
backend/app/: main.py
backend/app/cache/: redis.py
backend/app/core/: dependencies.py  emby.py  emby_data.py  emby_db.py  emby_users.py  event_bus.py  exceptions.py  middleware.py  risk_monitor.py  security.py  seed.py  settings.py  tmdb.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  api_key.py  calendar.py  invite.py  notification.py  notify.py  playback.py  poster.py  risk.py  system.py  user.py  users_meta.py  webhook.py
backend/app/modules/api_keys/: __init__.py
backend/app/modules/auth/: api.py  schemas.py  service.py
backend/app/modules/calendar/: api.py  schemas.py  service.py
backend/app/shared/: enums.py  responses.py
backend/app/tasks/: worker.py
frontend/: Dockerfile  (+5 more)
(+151 files in other folders)
